[package]
authors = ["Mathieu Suen <tryphont@pm.me>"]
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
description = "A platform agniostic driver to interface with teh I2C base MFXSTM32L152 Idd sensor."
keywords = [
    "embedded-hal-driver",
    "iddmonitor",
]
license = "0BSD"
name = "mfxstm32l152"
readme = "README.md"
repository = "https://github.com/mathk/mfxstm32l152"
version = "0.0.1"

[dependencies]
i2c-hal-tools = "0.0.1"

[dependencies.cast]
default-features = false
version = "0.2.2"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.2"